# twiq

./: .gitignore  CMakeLists.txt  README.md
src/: CanvasWidget.cpp  CanvasWidget.h  MainWindow.cpp  MainWindow.h  SpinnerTemplates.h  TemplateExplorerDialog.cpp  TemplateExplorerDialog.h  main.cpp
